    * Removed 100% upper limits on attack chain stat % conditions, and
      removed most hero/enemy stat limits
    * Rectangle slices can now optionally use any box border set.
      They are no longer limited to just the box borders defined in
      box styles [James]

  * New Plotscripting Features
    * "get rect raw border" and "set rect raw border" [James]

  * Changes

  * Bugfixes
    * Copy-paste in slice editor didn't copy slice extra data or autosort
      (also, couldn't edit the autosort sort order) [Ralph]

  * Stuff Only Developers Will Notice


August 31 2017 [Dwimmercrafty]

  Highlights:
    * NPC pathfinding, and other new NPC movetypes including follow-walls
    * Record .gif videos with Ctrl-F12
    * More map layers, hero definitions, and global variables
    * More info shown in-game in shops and spell lists
    * One-way walls
    * Lots of new in-game debug keys/F8 debug menu options, and a similar
      new menu in Custom accessed with F9
    * Can jump to attack, enemy, textbox and npc editors from other editors
    * Lots of progress on mouse support
    * On Windows, Custom's window is now resizable; resizing works almost
      everywhere
    * Sound effect volume control

  * New Features
    * Mark Non-elemental Elementals menu lets you define which elements
      shouldn't count as elemental for enemy spawning purposes [James]
    * Dramatic Pause for attack animations. Unlike "Delay Ticks" this
      always pauses time for everybody in battle. Dramatic pause starts
      after the (undelayed) caption appears, but before the visible
      animation begins [James]
    * New attacker animation "Standing Strike" [James]
    * Enemies can now do a non-elemental counterattack for any attack
      that lacks elemental damage. Similar to non-elemental spawning
      [James]
    * Spells in spell lists can now also display HP, Money, and Item
      costs. MP costs are no longer invisible in Level-MP spell lists
      [James]