@@ -673,6 +673,7 @@ define function, begin
 649,multdiv,3,0,0,0           # calculate int(float(a)*b/c), with rounding and clamping (undocumented)
 650,setrectrawborder,2,0,-1   # set a rectangle slice to use a specific border sprite instead of the border for its style
 651,getrectrawborder,1,0      # set a rectangle slice to use a specific border sprite instead of the border for its style
+652,cloneslice,2,0,1          # Copy a slice (handle, recurse)
 # Don't forget to update maxScriptCmdID in const.bi when adding new commands
 end
 
