@@ -4411,6 +4411,19 @@ SUB script_functions(byval cmdid as integer)
     scriptret = dat->border  'border:line or border:none
    END IF
   END IF
+ CASE 652 '--clone slice(recurse)
+  IF valid_plotslice(retvals(0)) THEN
+   DIM as Slice ptr sl, ret
+   sl = plotslices(retvals(0))
+   IF sl->Parent THEN ret = CloneSliceTree(sl, retvals(1) <> 0, NO)
+   IF ret = 0 THEN  'Returned in the following case:
+    scripterr "cloneslice: Can't copy a Map slice or the Root slice"
+   ELSE
+    'sl has a parent
+    InsertSliceAfter sl, ret
+    scriptret = create_plotslice_handle(ret)
+   END IF
+  END IF
 
  CASE ELSE
   'We also check the HSP header at load time to check there aren't unsupported commands
